manifests/keycloak/keycloak-deploy.yaml
# Keycloak Deployment, Service, and Ingress
# 1) Check admin username & password
# 2) Check ingressclass, hostname and TLS configuration 
# 3) Generate private certificates for TLS from cert directory

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.6.1
        args:
        - start-dev
        - --http-enabled=true
        - --hostname=https://keycloak.node-01
        - --proxy-headers=xforwarded
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 15
        resources:
          requests:
            cpu: 250m
            memory: 768Mi
          limits:
            memory: 1536Mi
